--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
         <a href="#con" class="mob">Contact Me</a>
     </div>
 
-    <center><div class="details"><br><br><br><br><br><br><br><br>
+    <center><div class="details"><br><br><br><br><br><br>
         <font>Gunda Ravi Teja</font> <br>
         <p>Very excited to learn new things</p>
         <a href="https://github.com/RaviTeja-gunda"><ion-icon name="logo-github"></ion-icon></a>
         <a href="https://www.linkedin.com/in/gunda-ravi-teja-0a9a99242/"><ion-icon name="logo-linkedin"></ion-icon></a>
         <a href="https://instagram.com/raviteja.gunda.18?igshid=ZDdkNTZiNTM="><ion-icon name="logo-instagram"></ion-icon></a><br><br><br>
-        <a href="#ab" class="me">Know More</a><br><br><br><br><br><br><br><br>
+        <a href="#ab" class="me">Know More</a><br><br><br><br><br>
     </div></center>
 
     <div class="Detail" id="ab"><br><br><br>
