--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <a href="#pr">Projects</a>
         <a href="#sk">Skills</a>
         <a href="#con" class="mob">Contact Me</a>
+        <a href="blog.html">My Blog</a>
     </div>
 
     <center><div class="details"><br><br><br><br><br><br>
