--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
         <font>Gunda Ravi Teja</font> <br>
         <p>Very excited to learn new things</p>
         <a href="https://github.com/RaviTeja-gunda"><ion-icon name="logo-github"></ion-icon></a>
-        <a href="https://www.linkedin.com/in/gunda-ravi-teja-0a9a99242/"><ion-icon name="logo-linkedin"></ion-icon></a>
-        <a href="https://instagram.com/raviteja.gunda.18?igshid=ZDdkNTZiNTM="><ion-icon name="logo-instagram"></ion-icon></a><br><br><br>
+        <a href="https://www.linkedin.com/in/gunda-ravi-teja-0a9a99242/"><ion-icon name="logo-linkedin"></ion-icon></a><br><br><br>
         <a href="#ab" class="me">Know More</a><br><br><br><br><br>
     </div></center>
 
