--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <div class="Detail" id="ab"><br><br><br>
         <div class="image"><img src="img.jpg" height="350px" width="350px" style="border-radius: 50%"></div>
         <div class="aboutme"><center>About Me</center>
-            <p>My name is Gunda Ravi Teja. Iam currently pursuing graduate in Computer Science Stream at LakiReddy Bali Reddy College 
-            of Engineering. I'll get my degree in 2024. I'am passionate in Java Programming and I'm still learning Java. My goal is 
+            <p>My name is Gunda Ravi Teja. I am currently pursuing graduate in Computer Science Stream at LakiReddy Bali Reddy College 
+            of Engineering. I'll get my degree in 2024. I am passionate in Java Programming and I am still learning Java. My goal is 
             to become a Java Developer. I'll work with Java related concepts when I am free. <br><br></p>
             <center><a href="https://drive.google.com/file/d/1jjpYa-chr0p2UgM1d0HN4tyJ5mj__0q3/view?usp=sharing">Resume</a></center>
         </div>
